feat: created books service and handler
